<resources>
    <string name="app_name">Jugsoo Market</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_fragment_total">Total = $</string>
    <string name="base_fragment_scanqr">Scan QR</string>
    <string name="base_fragment_calculatetotal">Calculate Total</string>
    <string name="cart_inflater_itemname">Item Name</string>
    <string name="cart_inflater_itemquantity">Item Quantity</string>
    <string name="cart_inflater_itemprice">Item Price</string>
    <string name="fragement_manual_qrcode_scanqrhint">Scan QR or Enter the item ID here</string>
    <string name="fragement_manual_qrcode_quantity">Quantity:</string>
    <string name="fragement_manual_qrcode_numberpicker">1</string>
    <string name="fragement_manual_qrcode_addtocart">Add to Cart</string>
    <string name="fragement_manual_qrcode_cancel">Cancel</string>
</resources>
