<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/manual_fragment"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".Fragments.ManualQRCodeFragment">

    <EditText
        android:id="@+id/item_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragement_manual_qrcode_scanqrhint"
        android:inputType="text" />

    <TextView
        android:id="@+id/quantityText"
        android:layout_below="@+id/item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/fragement_manual_qrcode_quantity"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/number_picker_qunatity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_id"
        android:layout_toEndOf="@+id/quantityText"
        android:inputType="number"
        android:text="@string/fragement_manual_qrcode_numberpicker" />

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/camerapreview"
        android:layout_below="@+id/number_picker_qunatity"
        android:layout_above="@+id/save"/>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel"
        android:text="@string/fragement_manual_qrcode_addtocart" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/fragement_manual_qrcode_cancel" />

</RelativeLayout>