<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.BaseFragment">

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/base_fragment_total"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:layout_marginTop="0dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scanQR"
        android:layout_below="@+id/total"
        ></androidx.recyclerview.widget.RecyclerView>
    <Button
        android:id="@+id/scanQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/add"
        android:background="@color/colorPrimary"
        android:text="@string/base_fragment_scanqr"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/base_fragment_calculatetotal"
        android:textColor="@android:color/white"
        />

</RelativeLayout>