<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:cardElevation="15dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/colorPrimary">



        <TextView
            android:layout_alignParentTop="true"
            android:id="@+id/itemName"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/cart_inflater_itemname"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/itemName"
            android:id="@+id/itemQuantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:gravity="end"
            android:text="@string/cart_inflater_itemquantity"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginStart="10dp"
            android:layout_below="@+id/itemName"
            android:id="@+id/itemImage"
            android:gravity="center"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart_inflater_itemprice"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/itemQuantity"

            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>